--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,2 +1,4 @@
 dependencies {
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
 }
