--- a/webs/web-tyb/src/main/resources/application.properties
+++ b/webs/web-tyb/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.sql-script-encoding=UTF-8
+
+spring.datasource.initialSize=16
+spring.datasource.minIdle=16
+spring.datasource.maxActive=256
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
